# general-monorepo-template

./: .bazelrc  .gitignore  ARCHITECTURE.md  DEVELOPMENT.md  MODULE.bazel  README.md  flake.nix
.github/workflows/: ci.yml
docs/agents/: README.md
docs/agents/c/: README.md
docs/agents/go/: README.md
docs/agents/infrastructure/: README.md
docs/agents/java/: README.md
docs/agents/javascript/: README.md
docs/agents/nix/: README.md
docs/agents/protocols/: README.md
docs/agents/python/: README.md
docs/agents/rust/: README.md
docs/examples/: language-implementations.md
nix/: BUILD.bazel  defs.bzl
